--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FundedNext Payment Partners</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 
     <!-- Tailwind CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet">
@@ -30,6 +31,34 @@
               
             
         </header>
+        <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+    <div class="tradingview-widget-container__widget"></div>
+    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+    {
+      "symbols": [
+        {"proName":"FX_IDC:EURUSD", "title": "EUR/USD"},
+        {"proName":"FX_IDC:USDJPY", "title": "USD/JPY"},
+        {"proName":"FX_IDC:GBPUSD", "title": "GBP/USD"},
+        {"proName":"FX_IDC:AUDUSD", "title": "AUD/USD"},
+        {"proName":"FX_IDC:USDCAD", "title": "USD/CAD"},
+        {"proName":"FX_IDC:USDCHF", "title": "USD/CHF"},
+        {"proName":"FX_IDC:NZDUSD", "title": "NZD/USD"},
+        {"proName":"FX_IDC:EURGBP", "title": "EUR/GBP"},
+        {"proName":"FX_IDC:EURJPY", "title": "EUR/JPY"},
+        {"proName":"FX_IDC:GBPJPY", "title": "GBP/JPY"},
+        // Add more pairs as needed
+      ],
+      "colorTheme": "dark",
+      "isTransparent": true,
+      "displayMode": "adaptive",
+      "locale": "en"
+    }
+    </script>
+  </div>
+  <!-- TradingView Widget END -->
+  
+  
 
         <div class="container mx-auto mt-8">
             <div class="flex flex-wrap -mx-2">
