--- a/index.html
+++ b/index.html
@@ -69,14 +69,15 @@
   
   
 
-        <div class="container mx-auto mt-8">
+        <div class="container mx-auto mt-8 ml-15 mr-15">
             <div class="flex flex-wrap -mx-2">
                 <div class="w-full lg:w-1/2 px-2 mb-4">
                     <!-- Dynamic account boxes will be added here -->
-                    <div class="accounts-container bg-purple-600 p-4 rounded-lg shadow" id="accountsContainer"></div>
-                    <button id="addAccountBtn" class="btn bg-purple-700 hover:bg-purple-800 text-white font-semibold py-2 px-4 rounded shadow mt-4">Add Account</button>
+                    <div class="accounts-container bg-white p-3 rounded-lg shadow" id="accountsContainer"></div>
+                    <button id="addAccountBtn" class="btn bg-purple-700 hover:bg-purple-800 text-white font-semibold py-2 px-4 rounded shadow mt-4 mx-auto ml-25">Add Account</button>
                 </div>
                 <div class="w-full lg:w-1/2 px-4">
+                    <div class=" bg-white p-3 rounded-lg shadow" id="accountsContainer">
                     <div class="pricing-section bg-purple-500 p-4 rounded-lg shadow">
                         <div id="selectionSummaries" class="mb-4">
                             <!-- Dynamic selection summaries will be inserted here -->
@@ -87,6 +88,7 @@
                             <input type="text" id="trxidInput" class="input input-bordered w-full" placeholder="Complete the Payment and Submit Your TRXID">
                             <button id="submitTrxidBtn" class="btn bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded shadow mt-4">Submit</button>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
