--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@
           signInWithEmailAndPassword(auth, email, password)
             .then((userCredential) => {
               // Signed in successfully, redirect or perform other actions
-              window.location.href = '/FN-Payment-Partner/index.html'; // Adjust the path as needed
+              window.location.href = '/index.html'; // Adjust the path as needed
 
             })
             .catch((error) => {
