--- a/login.html
+++ b/login.html
@@ -31,7 +31,8 @@
                     Payment Partner Portal
                 </h1>
             </div>
-            <form class="mt-8 space-y-6" method="POST" onsubmit="login(event)">
+            <form class="mt-8 space-y-6" onsubmit="login(event)">
+
                 <input type="hidden" name="remember" value="true">
                 <div class="rounded-md shadow-sm -space-y-px">
                     <div>
