--- a/index.html
+++ b/index.html
@@ -99,6 +99,23 @@
     </script>
   </div>
   <!-- TradingView Widget END -->
+
+  <div class="mx-auto mt-8">
+    <div class="card bg-white shadow-lg rounded-lg overflow-hidden flex items-center p-4" style="max-width: 640px; margin: auto;">
+        <div class="flex items-center space-x-4">
+            <img src="https://via.placeholder.com/100" alt="Payment Logo" class="w-12 h-12 rounded-full">
+            <div>
+                <div class="font-bold text-lg">Payment Address</div>
+                <p class="text-gray-700">1234 5678 9012 3456</p>
+            </div>
+        </div>
+        <div class="ml-auto">
+            <button class="bg-purple-700 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
+                Copy Address
+            </button>
+        </div>
+    </div>
+</div>
   
   
 
