--- a/index.html
+++ b/index.html
@@ -99,24 +99,76 @@
     </script>
   </div>
   <!-- TradingView Widget END -->
-
   <div class="mx-auto mt-8">
-    <div class="card bg-white shadow-lg rounded-lg overflow-hidden flex items-center p-4" style="max-width: 640px; margin: auto;">
-        <div class="flex items-center space-x-4">
-            <img src="https://via.placeholder.com/100" alt="Payment Logo" class="w-12 h-12 rounded-full">
-            <div>
-                <div class="font-bold text-lg">Payment Address</div>
-                <p class="text-gray-700">1234 5678 9012 3456</p>
+    <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-4 text-black">
+        <h2 class="text-xl font-semibold mb-4">Payment Addresses</h2>
+        <div class="space-y-3">
+            <div class="payment-addresses">
+                <!-- ETH -->
+                <div class="flex justify-between items-center py-2">
+                    <div>ETH: 0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3</div>
+                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">Copy Address</button>
+                </div>
+                <!-- BTC -->
+                <div class="flex justify-between items-center py-2">
+                    <div>BTC: bc1qkvtpqxaksvne0x0lxctgeg0ytl5ag8twq2y3z6</div>
+                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="bc1qkvtpqxaksvne0x0lxctgeg0ytl5ag8twq2y3z6">Copy Address</button>
+                </div>
+                <!-- LTC -->
+                <div class="flex justify-between items-center py-2">
+                    <div>LTC: ltc1qscn6unrtzpmqpnn44ajnpwwvut8dqv3s2hunr6</div>
+                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="ltc1qscn6unrtzpmqpnn44ajnpwwvut8dqv3s2hunr6">Copy Address</button>
+                </div>
+                <!-- Doge -->
+                <div class="flex justify-between items-center py-2">
+                    <div>Doge: DA6eGSbQpFweaqQtT647ZJ459Sv9mLBkvZ</div>
+                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="DA6eGSbQpFweaqQtT647ZJ459Sv9mLBkvZ">Copy Address</button>
+                </div>
+                <!-- Solana -->
+                <div class="flex justify-between items-center py-2">
+                    <div>Solana: ECscLcxVvYWFJqboknDE4Kqjep7U5UbX3CvEahytNXYJ</div>
+                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="ECscLcxVvYWFJqboknDE4Kqjep7U5UbX3CvEahytNXYJ">Copy Address</button>
+                </div>
+                <!-- USDT(TRC20) -->
+                <div class="flex justify-between items-center py-2">
+                    <div>USDT(TRC20): TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F</div>
+                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F">Copy Address</button>
+                </div>
+                <!-- USDT(ERC20) -->
+                <div class="flex justify-between items-center py-2">
+                    <div>USDT(ERC20): 0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3</div>
+                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">Copy Address</button>
+                </div>
+                <!-- USDC(TRC20) -->
+                <div class="flex justify-between items-center py-2">
+                    <div>USDC(TRC20): TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F</div>
+                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F">Copy Address</button>
+                </div>
+                <!-- USDC(ERC20) -->
+                <div class="flex justify-between items-center py-2">
+                    <div>USDC(ERC20): 0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3</div>
+                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">Copy Address</button>
+                </div>
             </div>
-        </div>
-        <div class="ml-auto">
-            <button class="bg-purple-700 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
-                Copy Address
-            </button>
         </div>
     </div>
 </div>
-  
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    document.querySelectorAll('.copy-btn').forEach(button => {
+        button.addEventListener('click', function() {
+            navigator.clipboard.writeText(button.getAttribute('data-address')).then(() => {
+                // You can replace this alert with a more subtle notification
+                alert('Address copied to clipboard!');
+            }).catch(err => {
+                console.error('Error in copying text: ', err);
+                alert('Failed to copy address.');
+            });
+        });
+    });
+});
+</script>
   
 
         <div class="container mx-auto mt-8 ml-15 mr-15">
