--- a/index.html
+++ b/index.html
@@ -102,57 +102,47 @@
   <div class="mx-auto mt-8">
     <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-4 text-black">
         <h2 class="text-xl font-semibold mb-4">Payment Addresses</h2>
-        <div class="space-y-3">
-            <div class="payment-addresses">
-                <!-- ETH -->
-                <div class="flex justify-between items-center py-2">
-                    <div>ETH: 0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3</div>
-                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">Copy Address</button>
-                </div>
-                <!-- BTC -->
-                <div class="flex justify-between items-center py-2">
-                    <div>BTC: bc1qkvtpqxaksvne0x0lxctgeg0ytl5ag8twq2y3z6</div>
-                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="bc1qkvtpqxaksvne0x0lxctgeg0ytl5ag8twq2y3z6">Copy Address</button>
-                </div>
-                <!-- LTC -->
-                <div class="flex justify-between items-center py-2">
-                    <div>LTC: ltc1qscn6unrtzpmqpnn44ajnpwwvut8dqv3s2hunr6</div>
-                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="ltc1qscn6unrtzpmqpnn44ajnpwwvut8dqv3s2hunr6">Copy Address</button>
-                </div>
-                <!-- Doge -->
-                <div class="flex justify-between items-center py-2">
-                    <div>Doge: DA6eGSbQpFweaqQtT647ZJ459Sv9mLBkvZ</div>
-                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="DA6eGSbQpFweaqQtT647ZJ459Sv9mLBkvZ">Copy Address</button>
-                </div>
-                <!-- Solana -->
-                <div class="flex justify-between items-center py-2">
-                    <div>Solana: ECscLcxVvYWFJqboknDE4Kqjep7U5UbX3CvEahytNXYJ</div>
-                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="ECscLcxVvYWFJqboknDE4Kqjep7U5UbX3CvEahytNXYJ">Copy Address</button>
-                </div>
-                <!-- USDT(TRC20) -->
-                <div class="flex justify-between items-center py-2">
-                    <div>USDT(TRC20): TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F</div>
-                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F">Copy Address</button>
-                </div>
-                <!-- USDT(ERC20) -->
-                <div class="flex justify-between items-center py-2">
-                    <div>USDT(ERC20): 0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3</div>
-                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">Copy Address</button>
-                </div>
-                <!-- USDC(TRC20) -->
-                <div class="flex justify-between items-center py-2">
-                    <div>USDC(TRC20): TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F</div>
-                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F">Copy Address</button>
-                </div>
-                <!-- USDC(ERC20) -->
-                <div class="flex justify-between items-center py-2">
-                    <div>USDC(ERC20): 0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3</div>
-                    <button class="copy-btn bg-purple-700 hover:bg-purple-800 text-white font-bold py-1 px-4 rounded" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">Copy Address</button>
-                </div>
-            </div>
+        <div class="flex flex-wrap justify-between">
+            <!-- ETH -->
+            <button class="copy-btn flex items-center bg-purple-700 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded m-2" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">
+                <img src="eth-icon.png" alt="ETH" class="h-6 w-6 mr-2"> ETH
+            </button>
+            <!-- BTC -->
+            <button class="copy-btn flex items-center bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded m-2" data-address="bc1qkvtpqxaksvne0x0lxctgeg0ytl5ag8twq2y3z6">
+                <img src="btc-icon.png" alt="BTC" class="h-6 w-6 mr-2"> BTC
+            </button>
+            <!-- LTC -->
+            <button class="copy-btn flex items-center bg-gray-400 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded m-2" data-address="ltc1qscn6unrtzpmqpnn44ajnpwwvut8dqv3s2hunr6">
+                <img src="ltc-icon.png" alt="LTC" class="h-6 w-6 mr-2"> LTC
+            </button>
+            <!-- Doge -->
+            <button class="copy-btn flex items-center bg-orange-400 hover:bg-orange-500 text-white font-bold py-2 px-4 rounded m-2" data-address="DA6eGSbQpFweaqQtT647ZJ459Sv9mLBkvZ">
+                <img src="doge-icon.png" alt="Doge" class="h-6 w-6 mr-2"> Doge
+            </button>
+            <!-- Solana -->
+            <button class="copy-btn flex items-center bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded m-2" data-address="ECscLcxVvYWFJqboknDE4Kqjep7U5UbX3CvEahytNXYJ">
+                <img src="sol-icon.png" alt="Solana" class="h-6 w-6 mr-2"> Solana
+            </button>
+            <!-- USDT(TRC20) -->
+            <button class="copy-btn flex items-center bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded m-2" data-address="TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F">
+                <img src="usdt-icon.png" alt="USDT" class="h-6 w-6 mr-2"> USDT(TRC20)
+            </button>
+            <!-- USDT(ERC20) -->
+            <button class="copy-btn flex items-center bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded m-2" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">
+                <img src="usdt-icon.png" alt="USDT" class="h-6 w-6 mr-2"> USDT(ERC20)
+            </button>
+            <!-- USDC(TRC20) -->
+            <button class="copy-btn flex items-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded m-2" data-address="TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F">
+                <img src="usdc-icon.png" alt="USDC" class="h-6 w-6 mr-2"> USDC(TRC20)
+            </button>
+            <!-- USDC(ERC20) -->
+            <button class="copy-btn flex items-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded m-2" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">
+                <img src="usdc-icon.png" alt="USDC" class="h-6 w-6 mr-2"> USDC(ERC20)
+            </button>
         </div>
     </div>
 </div>
+
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
