--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <img src="ltc-icon.png" alt="LTC" class="h-6 w-6 mr-2"> LTC
             </button>
             <!-- Doge -->
-            <button class="copy-btn flex items-center bg-orange-400 hover:bg-orange-500 text-white font-bold py-2 px-4 rounded m-2" data-address="DA6eGSbQpFweaqQtT647ZJ459Sv9mLBkvZ">
+            <button class="copy-btn flex items-center bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded m-2" data-address="DA6eGSbQpFweaqQtT647ZJ459Sv9mLBkvZ">
                 <img src="doge-icon.png" alt="Doge" class="h-6 w-6 mr-2"> Doge
             </button>
             <!-- Solana -->
