--- a/index.html
+++ b/index.html
@@ -105,39 +105,39 @@
         <div class="flex flex-wrap justify-between">
             <!-- ETH -->
             <button class="copy-btn flex items-center bg-purple-700 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded m-2" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">
-                <img src="eth-icon.png" alt="ETH" class="h-6 w-6 mr-2"> ETH
+                <img src="./icons/ethereum.png" alt="ETH" class="h-6 w-6 mr-2"> ETH
             </button>
             <!-- BTC -->
             <button class="copy-btn flex items-center bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded m-2" data-address="bc1qkvtpqxaksvne0x0lxctgeg0ytl5ag8twq2y3z6">
-                <img src="btc-icon.png" alt="BTC" class="h-6 w-6 mr-2"> BTC
+                <img src="./icons/bitcoin.png" alt="BTC" class="h-6 w-6 mr-2"> BTC
             </button>
             <!-- LTC -->
             <button class="copy-btn flex items-center bg-gray-400 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded m-2" data-address="ltc1qscn6unrtzpmqpnn44ajnpwwvut8dqv3s2hunr6">
-                <img src="ltc-icon.png" alt="LTC" class="h-6 w-6 mr-2"> LTC
+                <img src="./icons/coin.png" alt="LTC" class="h-6 w-6 mr-2"> LTC
             </button>
             <!-- Doge -->
             <button class="copy-btn flex items-center bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded m-2" data-address="DA6eGSbQpFweaqQtT647ZJ459Sv9mLBkvZ">
-                <img src="doge-icon.png" alt="Doge" class="h-6 w-6 mr-2"> Doge
+                <img src="./icons/dogecoin.png" alt="Doge" class="h-6 w-6 mr-2"> Doge
             </button>
             <!-- Solana -->
             <button class="copy-btn flex items-center bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded m-2" data-address="ECscLcxVvYWFJqboknDE4Kqjep7U5UbX3CvEahytNXYJ">
-                <img src="sol-icon.png" alt="Solana" class="h-6 w-6 mr-2"> Solana
+                <img src="./icons/solana.png" alt="Solana" class="h-6 w-6 mr-2"> Solana
             </button>
             <!-- USDT(TRC20) -->
             <button class="copy-btn flex items-center bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded m-2" data-address="TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F">
-                <img src="usdt-icon.png" alt="USDT" class="h-6 w-6 mr-2"> USDT(TRC20)
+                <img src="./icons/money.png" alt="USDT" class="h-6 w-6 mr-2"> USDT(TRC20)
             </button>
             <!-- USDT(ERC20) -->
             <button class="copy-btn flex items-center bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded m-2" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">
-                <img src="usdt-icon.png" alt="USDT" class="h-6 w-6 mr-2"> USDT(ERC20)
+                <img src="./icons/money.png" alt="USDT" class="h-6 w-6 mr-2"> USDT(ERC20)
             </button>
             <!-- USDC(TRC20) -->
             <button class="copy-btn flex items-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded m-2" data-address="TMHgRbmQBRjR4dU1ywqGXFsmbdGgMTWm3F">
-                <img src="usdc-icon.png" alt="USDC" class="h-6 w-6 mr-2"> USDC(TRC20)
+                <img src="./icons/usdc.png" alt="USDC" class="h-6 w-6 mr-2"> USDC(TRC20)
             </button>
             <!-- USDC(ERC20) -->
             <button class="copy-btn flex items-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded m-2" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">
-                <img src="usdc-icon.png" alt="USDC" class="h-6 w-6 mr-2"> USDC(ERC20)
+                <img src="./icons/usdc.png" alt="USDC" class="h-6 w-6 mr-2"> USDC(ERC20)
             </button>
         </div>
     </div>
