--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-image: url('./bg.webp');
+            background-image: url('./bg2.webp');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
