--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
   <div class="mx-auto mt-8">
     <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-4 text-black">
         <h2 class="text-xl font-semibold mb-4">Payment Addresses</h2>
+        <h3 class="text-xl font-semibold mb-4">Click to Copy Address</h3>
         <div class="flex flex-wrap justify-between">
             <!-- ETH -->
             <button class="copy-btn flex items-center bg-purple-400 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded m-2" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">
