--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </button>
     </div>
 </div>
-
+</div>
 <!-- Sticky header (initially hidden) -->
 <div id="stickyHeader" class="sticky top-0 px-5 py-3">
     <div id="stickyHeader" class="fixed top-0 left-0 w-full bg-white shadow-md hidden">
