--- a/index.html
+++ b/index.html
@@ -103,8 +103,11 @@
 
     <div class="mx-auto mt-8">
         <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-4 text-black">
-            <h2 class="text-xl font-semibold mb-4">Payment Addresses</h2>
-            <h5 class="text-xl font-semibold mb-4">Click to Copy Address</h5>
+            <!-- Text Container -->
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-xl font-semibold">Payment Addresses</h2>
+                <h5 class="text-sm text-gray-500">Click to Copy Address</h5>
+            </div>
             <div class="flex flex-wrap justify-between">
                 <!-- ETH -->
                 <button class="copy-btn flex items-center bg-purple-400 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded m-2" data-address="0x4Ada8a45198E4D3160e123E786419bF53B9E2AE3">
