--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     <div class="content-wrapper">
         <header class="relative text-center p-20 mb-4 shadow flex flex-col justify-center items-center" style="background: rgba(0, 0, 0, 0.5); min-height: 280px;">
             <!-- Video Background -->
-            <video autoplay loop muted playsinline class="header-video" style="position: absolute; z-index: -1; width: 2000px ; height: 280px; object-fit: cover;">
-                <source src="./icons/hv2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            
+    <video autoplay loop muted playsinline class="header-video">
+        <source src="./icons/hv2.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
             <!-- Existing Header Content Here -->
             <div class="flex justify-center items-center w-full">
                 <img src="https://fundednext.fra1.digitaloceanspaces.com/competion-funded-next-logo.svg" alt="Logo" class="h-16 w-auto">
